--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "sb-buildpatches": "github:damianb/sb-buildpatches"
+    "sb-buildpatches": "github:damianb/sb-buildpatches",
+    "sb-validatejson": "github:damianb/sb-validatejson"
   }
 }
